--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,12 +13,20 @@
 
   <style>
     body {
-      background: #56ab2f;
+      /* background: #56ab2f; */
       /* fallback for old browsers */
-      background: -webkit-linear-gradient(to right, #a8e063, #56ab2f);
+      /* background: -webkit-linear-gradient(to right, #a8e063, #56ab2f); */
       /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(to right, #a8e063, #56ab2f);
+      /* background: linear-gradient(to right, #a8e063, #56ab2f); */
       /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+      background: #ADA996;
+      /* fallback for old browsers */
+      background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
+      /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
+      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
     }
   </style>
